Fix BoatSelector alignment

--- a/jvlm/jvlm.less
+++ b/jvlm/jvlm.less
@@ -82,6 +82,7 @@ div.GribmapMousePosition {
   top: 10px;
   right: 0px;
 }
+
 .GribmapControlWind .baseDiv {
   background-color: darkBlue;
   height: 100%;
@@ -320,6 +321,10 @@ span.ui-selectmenu-text {
   top:0px;
 }
 
+.BoatSelector
+{
+  padding-top: @BtnPadTop;
+}
 
 .TDB-Icon{
   width: @IconSize;
